--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
           </ul>
       </div>
   </main>
-  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.2/angular-animate.min.js"></script>
+  <script type="text/javascript" src="js/angular.min.js"></script>
+  <script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
+   <script type="text/javascript" src="js/angular-animate.min.js"></script>
   <script type="text/javascript">
     var app = angular.module('WikiApp', ['ngAnimate']);
 app.controller('MainCtrl', function($scope, $http, $timeout) {
